--- a/practice-1/pubspec.yaml
+++ b/practice-1/pubspec.yaml
@@ -82,10 +82,20 @@ flutter:
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
-  #     fonts:
+      # fonts:
   #       - asset: fonts/TrajanPro.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
+  fonts:
+    - family: ReemKufi
+      fonts:
+        - asset: assets\fonts\ReemKufi.ttf
+          weight: 300
+  # fonts:
+    - family: Muli
+      fonts:
+        - asset: assets\fonts\Muli-Light.ttf
+          weight: 300
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
